--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,22 @@
-alembic==1.11.1
-annotated-types==0.5.0
-anyio==3.7.1
-asyncpg==0.28.0
-click==8.1.6
-fastapi==0.100.1
-greenlet==2.0.2
+alembic==1.13.2
+annotated-types==0.7.0
+anyio==4.4.0
+async-timeout==4.0.3
+asyncpg==0.29.0
+click==8.1.7
+fastapi==0.112.0
+fastapi-pagination==0.12.26
+greenlet==3.0.3
 h11==0.14.0
-idna==3.4
-Mako==1.2.4
-MarkupSafe==2.1.3
-pydantic==2.1.1
-pydantic_core==2.4.0
-sniffio==1.3.0
-SQLAlchemy==2.0.19
-starlette==0.27.0
-typing_extensions==4.7.1
-uvicorn==0.23.1
+idna==3.7
+Mako==1.3.5
+MarkupSafe==2.1.5
+pydantic==2.8.2
+pydantic-settings==2.4.0
+pydantic_core==2.20.1
+python-dotenv==1.0.1
+sniffio==1.3.1
+SQLAlchemy==2.0.32
+starlette==0.37.2
+typing_extensions==4.12.2
+uvicorn==0.30.5
